# anapao

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  codspeed.yml  release-prepare.yml  release.yml
benches/: simulation.rs
benches/profiler/: mod.rs
benchmarks/: README.md  run_profiles.sh  run_profiles_all.sh
docs/: improvments-pr.md
scripts/: bench-criterion  bench-criterion.md  package-release.ps1  package-release.sh  resolve-version.sh
skills/anapao/: SKILL.md
specs/: _handoff.md  index.md
specs/000-program-control/: design.md  requirements.md  tasks.md
specs/001-pivot-surface/: design.md  requirements.md  tasks.md
specs/002-core-types/: design.md  requirements.md  tasks.md
specs/003-error-taxonomy/: design.md  requirements.md  tasks.md
specs/004-rng-policy/: design.md  requirements.md  tasks.md
specs/005-setup-validation/: design.md  requirements.md  tasks.md
specs/006-step-engine/: design.md  requirements.md  tasks.md
specs/007-stochastic-primitives/: design.md  requirements.md  tasks.md
specs/008-events-contract/: design.md  requirements.md  tasks.md
specs/009-monte-carlo-runner/: design.md  requirements.md  tasks.md
specs/010-stats-aggregator/: design.md  requirements.md  tasks.md
specs/011-artifact-writer/: design.md  requirements.md  tasks.md
specs/012-assertion-engine/: design.md  requirements.md  tasks.md
src/: error.rs  lib.rs  main.rs  prelude.rs  simulator.rs
tests/: artifact_schema_v2.rs  failure_path_batch_events.rs  main_binary.rs  parity_rulebook.rs  perf_determinism.rs  pikmin_diagram.rs  readme_playbook.rs  readme_snippets.rs  rstest_testkit.rs
(+98 files in other folders)
